--- a/Osazone.cabal
+++ b/Osazone.cabal
@@ -131,6 +131,7 @@ library
     , pretty-simple
     , prettyprinter
     , prettyprinter-ansi-terminal
+    , process
     , raw-strings-qq
     , text
     , transformers
@@ -192,6 +193,7 @@ executable Osazone-exe
     , pretty-simple
     , prettyprinter
     , prettyprinter-ansi-terminal
+    , process
     , raw-strings-qq
     , text
     , transformers
@@ -254,6 +256,7 @@ test-suite Osazone-test
     , pretty-simple
     , prettyprinter
     , prettyprinter-ansi-terminal
+    , process
     , raw-strings-qq
     , text
     , transformers
